# ocr

./: .gitignore  README.md  dataset.csv  pyproject.toml  spoji.py
Inteligentni-sistemi-4/: README.dataset.txt  data.yaml
canvas_states/: grejanje10__racun_za_grejanje.json  grejanje11__racun_za_grejanje.json  grejanje12__racun_za_grejanje.json  grejanje13__racun_za_grejanje.json  grejanje14__racun_za_smece.json  grejanje1__racun_za_grejanje.json  grejanje2__racun_za_grejanje.json  grejanje3__racun_za_grejanje.json  grejanje4__racun_za_grejanje.json  grejanje5__racun_za_grejanje.json  grejanje6__racun_za_smece.json  grejanje7__racun_za_grejanje.json  grejanje8__racun_za_grejanje.json  grejanje9__racun_za_grejanje.json  jotel1__jotel.json  jotel1__jotel_uplatnica.json  jotel2__jotel.json  jotel2__jotel_uplatnica.json  jotel3__jotel.json  jotel3__jotel_uplatnica.json  jotel4__jotel.json  jotel4__jotel_uplatnica.json  jotel5__jotel.json  jotel5__jotel_uplatnica.json  mts10__mts.json  mts10__mts_iznos.json  mts10__mts_uplatnica.json  mts11__mts.json  mts11__mts_iznos.json  mts11__mts_uplatnica.json  mts12__mts_uplatnica.json  mts13__mts.json  mts13__mts_iznos.json  mts13__mts_uplatnica.json  mts14__mts.json  mts14__mts_iznos.json  mts14__mts_uplatnica.json  mts15__mts.json  mts15__mts_iznos.json  mts15__mts_uplatnica.json  (+183 more)
env/: pyvenv.cfg
splits/: test.csv  train.csv  train_combined.csv  val.csv
src/: dataset.py  dataset_app.py  download_data.py  generate_synthetic.py  merge_datasets.py  model.py  ocr_pipeline.py  predict.py  predict_ocr.py  predict_yolo.py  rename.py  (+3 more)
(+254 files in other folders)
