[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "roboflow>=1.3.9",
    "scipy>=1.17.1",
    "ultralytics>=8.4.60",
]
