[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "python-doctr>=1.0.1",
    "roboflow>=1.3.9",
    "scipy>=1.17.1",
    "streamlit==1.40.0",
    "streamlit-drawable-canvas>=0.9.3",
    "ultralytics>=8.4.60",
]
